fixed vertical aligning design blocks

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1801,6 +1801,13 @@ span.code {
     justify-content: space-between;
 }
 
+.design-block {
+    -webkit-align-items: center;
+	-ms-align-items: center;
+	-moz-align-items: center;
+	align-items: center;
+}
+
 .design-block-double {
     margin: 200px 0;
 }
@@ -1813,7 +1820,7 @@ span.code {
     -ms-flex: 0.50;
     -moz-flex: 0.50;
     flex: 0.50;
-    padding: 20px;
+    padding: 0 20px;
 }
 
 .design-block .block-image img,
